# pinleaf

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
debian/: changelog  control  copyright  dev.pinleaf.Pinleaf.desktop  pinleaf-wrapper  rules
debian/source/: options
docs/: font-usage.md  known-limitations.md
docs/.specs/001-desktop-sticky-notes/: plan.md  spec.md  tasks.md
docs/.specs/002-local-desktop-install/: plan.md  spec.md  tasks.md
docs/.specs/003-about-help/: plan.md  spec.md  tasks.md
docs/.specs/004-project-page-and-screenshots/: plan.md  spec.md  tasks.md
docs/ideas/: ai-note-creation.md  cloud-sync.md
docs/release/: launchpad-ppa.md
docs/site/: index.html  styles.css
pinleaf/: __init__.py  __main__.py  app.py  appearance.py  config.py  fonts.py  metadata.py  models.py  tray_host.py
pinleaf/resources/: styles.css
pinleaf/services/: __init__.py  autosave.py  note_service.py
pinleaf/storage/: __init__.py  migrations.py  sqlite_store.py
pinleaf/ui/: __init__.py  about.py  dialogs.py  geometry.py  main_window.py  note_window.py  text_appearance_window.py  tray.py
scripts/: install-local  uninstall-local
tests/: test_about.py  test_appearance.py  test_autosave.py  test_config.py  test_debian_package.py  test_fonts.py  test_geometry.py  test_icons.py  test_install_scripts.py  test_main_window.py  test_metadata.py  test_models.py  test_note_service.py  test_note_window.py  test_release_workflow.py  test_site.py  test_sqlite_store.py  test_tray.py
(+18 files in other folders)
